<resources>
    <string name="app_name">Hommages aux décès Durant la WWII </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commemore">Commemore :</string>
    <string name="isi">valuee</string>
    <string name="kategori">Value2</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="a_propos_de_l_application">A propos de l\'application</string>
    <string name="a_propos_de_lapplication_text">Application réalisée dans le cadre du cours Design of Mobile Application à l\'Ecole desMines de Saint-Etienne cursus ISMIN.
    \nAnnée universitaire :2021/2022</string>

    <string name="description_de_l_application">Description de l\'application</string>
    <string name="description_de_l_application_text">
        Cette application permet de lister les plaques commémoratives, stèles et monuments liés à l\'histoire de la Résistance et de la Libération dans la région Ile-de-France.
        Elles sont affichées sur la carte, et les informations relatives à ces plaques sont consultables.</string>

    <string name="auteurs">Auteur de l\'application</string>
    <string name="auteurs_txt">Ce projet a été développé par Mohammed CHAKOR.</string>

    <string name="biblio">Ressources</string>
    <string name="biblio_txt">
        Langage de développement : Kotlin v1.5.31
    </string>
    <string name="detail_txt">Détails de l\'hommage</string>
    <string name="ttle_adresse_complete">Adresse complète :</string>
    <string name="ttle_commemore">Cette plaque commemore :</string>
    <string name="tmstmp">Date d\'enregistrement</string>
</resources>